--- a/style.css
+++ b/style.css
@@ -3,44 +3,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;400&display=swap');
 
 
+html{
+    /* font-size: 62.5%; */
+
+    font-size: 10px;
+}
+
 *{
     margin: 0;
     padding: 0;
-
 } 
+
+body{
+    background-color: hsl(212, 45%, 89%);
+    height: 100vh;
+}
 
 
 .container{
     display: flex;
     justify-content: center;
     align-items: center; 
-    height: 643px;
-    background-color: hsl(212, 45%, 89%)
+    height: 64.3rem;
 }
 
 .card{
     background-color: white;
-    width: 253px;
-    height: 400px;
-    border-radius: 20px;
+    width: 25.3rem;
+    /* max-width: 19vw; */
+    height: 40rem;
+    border-radius: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    
 }
 
 .imgBox{
-    margin: 0.7rem;
+    margin: auto;
+    padding: 1.1rem;
 }
 
 .imgBox img{
-    width: 230px;
-    height: 232px;
+    width: 23rem;
+    
+    height: 23rem;
     border-radius: 1rem;
     object-fit: cover;
 }
 
 .imgBox h2{
     font-family: 'Outfit', sans-serif;
-    font-size: 18px;
+    font-size: 1.8rem;
     text-align: center;
     margin: 8px 0;
     font-weight: 700;
@@ -50,7 +62,7 @@
 .imgBox p{
     margin: 8px 0;
     text-align: center;
-    font-size: 12px;
+    font-size: 1.2rem;
     font-family: 'Outfit', sans-serif;
     font-weight: 400;
     color: hsla(210, 6.5%, 58%, 0.92);
